# logicst

./: README.md  logicst.cabal
benchmarks/: unify.hs
src/Control/Monad/IO/: Logic.hs
src/Control/Monad/IO/Logic/: Internal.hs
src/Control/Monad/Ref/Logic/: Internal.hs
src/Control/Monad/ST/: Label.hs  Logic.hs
src/Control/Monad/ST/Logic/: Internal.hs
src/Control/Monad/Trans/State/Strict/: Strict.hs
src/Data/IORef/: Logic.hs
src/Data/STRef/: Logic.hs
