name:                logicst
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
homepage:            http://github.com/sonyandy/logicst
bug-reports:         http://github.com/sonyandy/logicst/issues
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >= 1.6

source-repository head
  type: git
  location: git://github.com/sonyandy/logicst.git

flag safe-st

library
  hs-source-dirs: src
  exposed-modules:
    Control.Monad.IO.Logic
    Control.Monad.ST.Logic
    Control.Monad.ST.Logic.Internal
    Data.IORef.Logic
    Data.STRef.Logic
  if flag(safe-st)
    build-depends: base >= 4.4
    cpp-options: -DMODULE_Control_Monad_ST_Safe
  else
    build-depends: base >= 4
  build-depends: base < 5, transformers, logict
  other-extensions: CPP, Rank2Types, TypeFamilies
  ghc-options: -Wall -O2
