name:                logicst
version:             0.1.0.0
synopsis:            Backtracking mutable references in the ST and IO monads
description:         Backtracking mutable references in the ST and IO monads
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
homepage:            http://github.com/sonyandy/logicst
bug-reports:         http://github.com/sonyandy/logicst/issues
copyright:           Copyright (C) 2013 Andy Sonnenburg
category:            Control
build-type:          Simple
cabal-version:       >= 1.8

source-repository head
  type: git
  location: git://github.com/sonyandy/logicst.git

flag SafeST
flag OldApplicative
flag modifySTRef

library
  hs-source-dirs: src
  exposed-modules:
    Control.Monad.IO.Logic
    Control.Monad.ST.Logic
    Control.Monad.ST.Logic.Internal
    Data.IORef.Logic
    Data.STRef.Logic
  if flag(SafeST)
    build-depends: base >= 4.4
    cpp-options: -DMODULE_Control_Monad_ST_Safe
  if flag(OldApplicative)
    build-depends: base < 4.2
    cpp-options: -DCLASS_OldApplicative
  if flag(modifySTRef)
    build-depends: base >= 4.6
    cpp-options: -DFUNCTION_modifySTRef
  build-depends: base >= 4 && < 5, transformers, logict
  other-extensions: CPP, Rank2Types, TypeFamilies
  ghc-options: -Wall -fwarn-tabs -O2

benchmark unify
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: unify.hs
  build-depends: base, recursion-schemes, criterion, logicst
  ghc-options: -Wall -fwarn-tabs -O2
